<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FFF"
    android:gravity="center_vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:id="@+id/event_name_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"
        android:id="@+id/nameEventShow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_description_text"
        android:layout_marginTop="20dp"
        android:text="@string/event_description"
        />

    <TextView
        android:id="@+id/descriptionEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/date_event_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/dateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/event_price_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_price"
        android:layout_marginTop="10dp" />


    <TextView
        android:id="@+id/eventPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/event_categories_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_categories"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/eventCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/event_adress_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_address"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/eventPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/rate_event_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/grid"
            android:text="@string/event_evaluation"
            android:layout_marginTop="10dp"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0.0"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:visibility="invisible"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/showEventOnMapButton"
            android:textColor="@color/DarkCyan"
            android:background="@drawable/button_border"
            android:text="@string/button_show_map_txt"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/participation"
            android:layout_marginLeft="10dp"
            android:id="@+id/EuVou"
            android:text="@string/event_confirmation"
            android:textColor="@color/DarkCyan"
            android:background="@drawable/button_border"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"></Button>


    </LinearLayout>

</LinearLayout>

</ScrollView>