<resources>
    <string name = "app_name"> EuVou </string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_a__place">Search_a_Place</string>
    <string name="btnSearchPlace">Search a Place</string>
    <string name="labelSearchPlace">Search place by name</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="empty_string"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Open navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_login">Login</string>
    <string name="username">Username</string>
    <string name="dateTag">Birthday:</string>
    <string name="email">E-mail:</string>
    <string name="emailConfirmation">E-mail confirmation:</string>
    <string name="passwordConfirmation">Password confirmation:</string>
    <string name="edit">Edit</string>
    <string name="login_activity">Let\'s go?</string>
    <string name="title_activity_home_page">HomePage</string>
    <string-array name="itens_menu_string">
        <item>All</item>
        <item>Museums</item>
        <item>Parks</item>
        <item>Teathers</item>
        <item>Malls</item>
        <item>Sports</item>
    </string-array>

    <string name="title_activity_search_user">SearchUser</string>
    <string name="title_activity_maps">Map</string>
    <string name="events">Events</string>
    <string name="places">Places</string>
    <string name="people">People</string>
    <string name="title_activity_event_consultation">EventConsultation</string>
    <string name="name">Name</string>

    <!-- Event -->
    <string name="DISABLE_ACCOUNT_FRAGMENT_TAG">disable_account_fragment_tag</string>
    <string name="title_activity_local_event">Map</string>
    <string name="event_date">Date:</string>
    <string name="event_hour">Hour:</string>
    <string name="event_description">Description:</string>
    <string name="event_name">Name:</string>
    <string name="event_price">Price:</string>
    <string name="event_categories">Categories:</string>
    <string name="event_address">Address:</string>
    <string name="event_evaluation">Your evaluation:</string>
    <string name="event_confirmation">#EuVou</string>
    <string name="grade">Grade</string>
    <string name="button_show_map_txt">Show on map</string>
    <string name="event_not_found_message">No event found :(</string>
    <string name="title_activity_show_place_on_map">ShowPlaceOnMap</string>
    <string name="title_activity_show_single">ShowSingle</string>
    <string name="visualizarRanking">Show Full Rank</string>
    <string name="category_show">Show</string>
    <string name="category_theater">Teather</string>
    <string name="category_cinema">Movie Teather</string>
    <string name="category_party">Party</string>
    <string name="category_museum">Museum</string>
    <string name="category_education">Education</string>
    <string name="category_exposition">Exposition</string>
    <string name="category_sport">Sports</string>
    <string name="category_others">Others</string>
    <string name="real_symbol">R$</string>
    <string name="comma">,</string>
    <string name="event_registered_with_success">Event registered with success :)</string>
    <string name="successfully_update_message">Successfully changed event :)</string>
    <string name="event_local">Local do Evento</string>
    <string name="select_event_local">Selecionar Local do Evento</string>
    <string name="register">Cadastrar</string>
    <string name="change">Alterar</string>
    <string name="remove">Remover</string>
    <string name="no_results">Sem resultados</string>
    <string name="no_user_found">Nenhum usuário foi encontrado :(</string>
    <string name="search">Pesquisar</string>
    <string name="no_recommended_events">Sem eventos recomendados!</string>
    <string name="no_event_created">Sem eventos criados!</string>
    <string name="user_updated_with_success">Usuario alterado com sucesso</string>
    <string name="event_name_cant_be_empty">Hey, acho que você está esquecendo de nos informar o
        nome do evento!</string>
    <string name="name_cant_be_greater_than_50">Hey, você ultrapassou o número de caracteres
        permitido para o nome do evento, tente novamente.</string>
    <string name="description_cant_be_empty">Hey, acho que você esqueceu de informar a descrição
        do evento.</string>
    <string name="description_cant_be_greater_than">Hey, o máximo de caracteres para descrever
        um evento é de 500 caracteres.</string>
    <string name="latitude_is_invalid">Hey, você inseriu um número inválido, a latitude deve ser
        maior que -90 e menor que 90!</string>
    <string name="longitude_is_invalid">Hey, você inseriu um número inválido, a longitude deve ser
        maior que -180 e menor que 180.</string>
    <string name="longitude_is_empty">Hey, você deixou a longitude em branco...
        preenche ela aí, vai!</string>
    <string name="latitude_is_empty">Hey, você deixou a latitude em branco...
        preenche ela aí, vai!</string>
    <string name="invalid_evaluation">Hey, você deve avaliar um evento com notas de 1 a 5!</string>
    <string name="address_is_empty">Hey, você esqueceu de nos informar o endereço do evento!</string>
    <string name="invalid_event_date">Hey, você informou uma data errada, pay attention guy!</string>
    <string name="event_date_is_empty">Hey, você esqueceu de informar a data do evento, cuidado!</string>
    <string name="price_real_is_empty">Hey, você esqueceu de informar a parte em reais do preço</string>
    <string name="price_decimal_is_empty">Hey, voce esqueceu de informar a parte decimal do preço.</string>
    <string name="invalid_event_hour">Hey, você informou uma hora inválida</string>
    <string name="event_hour_is_empty">Hey, você esqueceu de informar a hora.</string>
    <string name="category_is_invalid">Hey, você esqueceu de informar a categoria do evento,
        preenche ela aí, vai!</string>
    <string name="already_mark_participation">Hey, você já marcou sua participação</string>
    <string name="already_unmarked_participation">Hey, você já desmarcou sua participação</string>
    <string name="success_saved">Salvo com sucesso!</string>
    <string name="go">#EUVOU</string>
    <string name="places_ranking">Ranking de lugares</string>
    <string name="recommended_events">Eventos Recomendados</string>
    <string name="edit_register">Alterar cadastro</string>
    <string name="create_event">Cadastrar evento</string>
    <string name="settings">Configurações</string>
    <string name="my_events">Meus Eventos</string>
    <string name="logout">Sair</string>
</resources>
